--- a/app.json
+++ b/app.json
@@ -1,56 +1,61 @@
 {
-    "id": "nl.aldi",
-    "version": "1.0.1",
-    "compatibility": "0.x || 1.x",
-    "category": ["appliances", "lights"],
-    "name": {
-        "en": "Aldi",
+	"id": "nl.aldi",
+	"version": "1.1.0",
+	"compatibility": ">=0.9",
+	"category": [
+		"appliances",
+		"lights"
+	],
+	"name": {
+		"en": "Aldi",
 		"nl": "Aldi"
-    },
-    "description": {
+	},
+	"description": {
 		"en": "Give Homey the ability to control your Aldi devices",
 		"nl": "Laat Homey Aldi modules aansturen"
-    },
-    "author": {
-        "name" : "Athom B.V."
-    },
-    "images": {
+	},
+	"author": {
+		"name": "Athom B.V."
+	},
+	"images": {
 		"large": "./assets/images/large.png",
 		"small": "./assets/images/small.png"
-    },
-    "permissions": [
-	    "homey:wireless:433"
-    ],
-    "drivers": [
+	},
+	"permissions": [
+		"homey:wireless:433"
+	],
+	"drivers": [
 		{
-		    "id": "quigg",
-		    "name": {
+			"id": "quigg",
+			"name": {
 				"en": "Quigg socket",
-			    "nl": "Quigg schakelaar"
-		    },
-		    "images": {
+				"nl": "Quigg schakelaar"
+			},
+			"images": {
 				"large": "./drivers/quigg/assets/images/large.png",
 				"small": "./drivers/quigg/assets/images/small.png"
-		    },
-		    "class": "socket",
-		    "capabilities": [ "onoff" ],
-		    "pair": [
-			    {
-			    	"id": "imitateOn"
-			    },
-			    {
-			    	"id": "imitateOff",
-			    	"navigation": {
-				    	"prev": "imitateOn"
-			    	}
-			    },
-			    {
-			    	"id": "imitate2",
-			    	"navigation": {
+			},
+			"class": "socket",
+			"capabilities": [
+				"onoff"
+			],
+			"pair": [
+				{
+					"id": "imitateOn"
+				},
+				{
+					"id": "imitateOff",
+					"navigation": {
+						"prev": "imitateOn"
+					}
+				},
+				{
+					"id": "imitate2",
+					"navigation": {
 						"next": "choose_slave",
-				    	"prev": "imitateOff"
-			    	}
-			    },
+						"prev": "imitateOff"
+					}
+				},
 				{
 					"id": "choose_slave",
 					"template": "choose_slave",
@@ -59,9 +64,34 @@
 					}
 				},
 				{
-			    	"id": "done"
-			    }
-		    ]
+					"id": "done"
+				}
+			]
 		}
-    ]
+	],
+	"signals": {
+		"433": {
+			"quigg": {
+				"sof": [],
+				"eof": [
+					2970
+				],
+				"words": [
+					[
+						460,
+						1050
+					],
+					[
+						960,
+						560
+					]
+				],
+				"interval": 7060,
+				"repetitions": 20,
+				"sensitivity": 0.7,
+				"minimalLength": 24,
+				"maximalLength": 24
+			}
+		}
+	}
 }
